# brownie-renderer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
rust/: Cargo.toml  README.md  binary.ppm
rust/src/: bounds3.rs  bvh.rs  global.rs  hardware_detector.rs  intersection.rs  main.rs  material.rs  object.rs  ray.rs  renderer.rs  scene.rs  triangle.rs  vector.rs
src/: BVH.cpp  CMakeLists.txt  Hardware_Detector.cpp  Hardware_Detector.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
